modules/shex/src/main/antlr4/.antlr/ShExDocParser.java
// Generated from /home/labra/src/shapes/shex-s/modules/shex/src/main/antlr4/ShExDoc.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ShExDocParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, KW_ABSTRACT=29, KW_AS=30, KW_BASE=31, 
		KW_EXTENDS=32, KW_IMPORT=33, KW_RESTRICTS=34, KW_EXTERNAL=35, KW_PREFIX=36, 
		KW_START=37, KW_VIRTUAL=38, KW_CLOSED=39, KW_EXTRA=40, KW_LITERAL=41, 
		KW_IRI=42, KW_NONLITERAL=43, KW_BNODE=44, KW_AND=45, KW_OR=46, KW_MININCLUSIVE=47, 
		KW_MINEXCLUSIVE=48, KW_MAXINCLUSIVE=49, KW_MAXEXCLUSIVE=50, KW_LENGTH=51, 
		KW_MINLENGTH=52, KW_MAXLENGTH=53, KW_TOTALDIGITS=54, KW_FRACTIONDIGITS=55, 
		KW_NOT=56, KW_TRUE=57, KW_FALSE=58, SKIP_=59, CODE=60, RDF_TYPE=61, IRIREF=62, 
		PNAME_NS=63, PNAME_LN=64, ATPNAME_NS=65, ATPNAME_LN=66, REGEXP=67, REGEXP_FLAGS=68, 
		BLANK_NODE_LABEL=69, LANGTAG=70, INTEGER=71, DECIMAL=72, DOUBLE=73, STEM_MARK=74, 
		UNBOUNDED=75, STRING_LITERAL1=76, STRING_LITERAL2=77, STRING_LITERAL_LONG1=78, 
		STRING_LITERAL_LONG2=79;
	public static final int
		RULE_shExDoc = 0, RULE_directive = 1, RULE_baseDecl = 2, RULE_prefixDecl = 3, 
		RULE_importDecl = 4, RULE_notStartAction = 5, RULE_start = 6, RULE_startActions = 7, 
		RULE_statement = 8, RULE_shapeExprDecl = 9, RULE_shapeExpression = 10, 
		RULE_inlineShapeExpression = 11, RULE_shapeOr = 12, RULE_inlineShapeOr = 13, 
		RULE_shapeAnd = 14, RULE_inlineShapeAnd = 15, RULE_shapeNot = 16, RULE_inlineShapeNot = 17, 
		RULE_negation = 18, RULE_shapeAtom = 19, RULE_inlineShapeAtom = 20, RULE_shapeOrRef = 21, 
		RULE_inlineShapeOrRef = 22, RULE_shapeRef = 23, RULE_inlineLitNodeConstraint = 24, 
		RULE_litNodeConstraint = 25, RULE_inlineNonLitNodeConstraint = 26, RULE_nonLitNodeConstraint = 27, 
		RULE_nonLiteralKind = 28, RULE_xsFacet = 29, RULE_stringFacet = 30, RULE_stringLength = 31, 
		RULE_numericFacet = 32, RULE_numericRange = 33, RULE_numericLength = 34, 
		RULE_rawNumeric = 35, RULE_shapeDefinition = 36, RULE_inlineShapeDefinition = 37, 
		RULE_qualifier = 38, RULE_extraPropertySet = 39, RULE_tripleExpression = 40, 
		RULE_oneOfTripleExpr = 41, RULE_multiElementOneOf = 42, RULE_groupTripleExpr = 43, 
		RULE_singleElementGroup = 44, RULE_multiElementGroup = 45, RULE_unaryTripleExpr = 46, 
		RULE_bracketedTripleExpr = 47, RULE_tripleConstraint = 48, RULE_cardinality = 49, 
		RULE_repeatRange = 50, RULE_min_range = 51, RULE_max_range = 52, RULE_expr = 53, 
		RULE_binOp = 54, RULE_basicExpr = 55, RULE_senseFlags = 56, RULE_valueSet = 57, 
		RULE_valueSetValue = 58, RULE_iriRange = 59, RULE_iriExclusion = 60, RULE_literalRange = 61, 
		RULE_literalExclusion = 62, RULE_languageRange = 63, RULE_languageExclusion = 64, 
		RULE_include = 65, RULE_annotation = 66, RULE_semanticAction = 67, RULE_literal = 68, 
		RULE_predicate = 69, RULE_rdfType = 70, RULE_datatype = 71, RULE_shapeExprLabel = 72, 
		RULE_tripleExprLabel = 73, RULE_numericLiteral = 74, RULE_rdfLiteral = 75, 
		RULE_booleanLiteral = 76, RULE_string = 77, RULE_iri = 78, RULE_prefixedName = 79, 
		RULE_blankNode = 80, RULE_extension = 81, RULE_restrictions = 82;
	public static final String[] ruleNames = {
		"shExDoc", "directive", "baseDecl", "prefixDecl", "importDecl", "notStartAction", 
		"start", "startActions", "statement", "shapeExprDecl", "shapeExpression", 
		"inlineShapeExpression", "shapeOr", "inlineShapeOr", "shapeAnd", "inlineShapeAnd", 
		"shapeNot", "inlineShapeNot", "negation", "shapeAtom", "inlineShapeAtom", 
		"shapeOrRef", "inlineShapeOrRef", "shapeRef", "inlineLitNodeConstraint", 
		"litNodeConstraint", "inlineNonLitNodeConstraint", "nonLitNodeConstraint", 
		"nonLiteralKind", "xsFacet", "stringFacet", "stringLength", "numericFacet", 
		"numericRange", "numericLength", "rawNumeric", "shapeDefinition", "inlineShapeDefinition", 
		"qualifier", "extraPropertySet", "tripleExpression", "oneOfTripleExpr", 
		"multiElementOneOf", "groupTripleExpr", "singleElementGroup", "multiElementGroup", 
		"unaryTripleExpr", "bracketedTripleExpr", "tripleConstraint", "cardinality", 
		"repeatRange", "min_range", "max_range", "expr", "binOp", "basicExpr", 
		"senseFlags", "valueSet", "valueSetValue", "iriRange", "iriExclusion", 
		"literalRange", "literalExclusion", "languageRange", "languageExclusion", 
		"include", "annotation", "semanticAction", "literal", "predicate", "rdfType", 
		"datatype", "shapeExprLabel", "tripleExprLabel", "numericLiteral", "rdfLiteral", 
		"booleanLiteral", "string", "iri", "prefixedName", "blankNode", "extension", 
		"restrictions"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'!'", "'('", "')'", "'.'", "'@'", "'{'", "'}'", "'|'", "';'", 
		"'$'", "'+'", "'?'", "','", "'!='", "'>'", "'<'", "'>='", "'<='", "'/'", 
		"'-'", "'^'", "'['", "']'", "'&'", "'//'", "'%'", "'^^'", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "'true'", "'false'", null, null, "'a'", null, null, null, 
		null, null, null, null, null, null, null, null, null, "'~'", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "KW_ABSTRACT", "KW_AS", "KW_BASE", "KW_EXTENDS", 
		"KW_IMPORT", "KW_RESTRICTS", "KW_EXTERNAL", "KW_PREFIX", "KW_START", "KW_VIRTUAL", 
		"KW_CLOSED", "KW_EXTRA", "KW_LITERAL", "KW_IRI", "KW_NONLITERAL", "KW_BNODE", 
		"KW_AND", "KW_OR", "KW_MININCLUSIVE", "KW_MINEXCLUSIVE", "KW_MAXINCLUSIVE", 
		"KW_MAXEXCLUSIVE", "KW_LENGTH", "KW_MINLENGTH", "KW_MAXLENGTH", "KW_TOTALDIGITS", 
		"KW_FRACTIONDIGITS", "KW_NOT", "KW_TRUE", "KW_FALSE", "SKIP_", "CODE", 
		"RDF_TYPE", "IRIREF", "PNAME_NS", "PNAME_LN", "ATPNAME_NS", "ATPNAME_LN", 
		"REGEXP", "REGEXP_FLAGS", "BLANK_NODE_LABEL", "LANGTAG", "INTEGER", "DECIMAL", 
		"DOUBLE", "STEM_MARK", "UNBOUNDED", "STRING_LITERAL1", "STRING_LITERAL2", 
		"STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ShExDoc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ShExDocParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ShExDocContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ShExDocParser.EOF, 0); }
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public NotStartActionContext notStartAction() {
			return getRuleContext(NotStartActionContext.class,0);
		}
		public StartActionsContext startActions() {
			return getRuleContext(StartActionsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ShExDocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shExDoc; }
	}

	public final ShExDocContext shExDoc() throws RecognitionException {
		ShExDocContext _localctx = new ShExDocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_shExDoc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_BASE) | (1L << KW_IMPORT) | (1L << KW_PREFIX))) != 0)) {
				{
				{
				setState(166);
				directive();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 27)) & ~0x3f) == 0 && ((1L << (_la - 27)) & ((1L << (T__26 - 27)) | (1L << (KW_START - 27)) | (1L << (IRIREF - 27)) | (1L << (PNAME_NS - 27)) | (1L << (PNAME_LN - 27)) | (1L << (BLANK_NODE_LABEL - 27)))) != 0)) {
				{
				setState(174);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_START:
				case IRIREF:
				case PNAME_NS:
				case PNAME_LN:
				case BLANK_NODE_LABEL:
					{
					setState(172);
					notStartAction();
					}
					break;
				case T__26:
					{
					setState(173);
					startActions();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 31)) & ~0x3f) == 0 && ((1L << (_la - 31)) & ((1L << (KW_BASE - 31)) | (1L << (KW_IMPORT - 31)) | (1L << (KW_PREFIX - 31)) | (1L << (KW_START - 31)) | (1L << (IRIREF - 31)) | (1L << (PNAME_NS - 31)) | (1L << (PNAME_LN - 31)) | (1L << (BLANK_NODE_LABEL - 31)))) != 0)) {
					{
					{
					setState(176);
					statement();
					}
					}
					setState(181);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(184);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public BaseDeclContext baseDecl() {
			return getRuleContext(BaseDeclContext.class,0);
		}
		public PrefixDeclContext prefixDecl() {
			return getRuleContext(PrefixDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive);
		try {
			setState(189);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_BASE:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				baseDecl();
				}
				break;
			case KW_PREFIX:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				prefixDecl();
				}
				break;
			case KW_IMPORT:
				enterOuterAlt(_localctx, 3);
				{
				setState(188);
				importDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseDeclContext extends ParserRuleContext {
		public TerminalNode KW_BASE() { return getToken(ShExDocParser.KW_BASE, 0); }
		public TerminalNode IRIREF() { return getToken(ShExDocParser.IRIREF, 0); }
		public BaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseDecl; }
	}
